styles.css
html,body{
    color: #4d4e53;
    background-color: #ffffff;
    font-family: 'Open Sans', Arial, sans-serif;
    line-height: 1.5;
}

img{
    display: block;
    margin: 20px auto;

}

#navbar{
    position: fixed;
    min-width: 290px;
    width: 300px;
    left: 0;
    border-right: solid;
    border-color: rgba(71, 71, 71, 0.3); 
    height: 100%;
    top: 0;
}

#main-doc{
    position: absolute;
    margin-left: 310px;
    padding: 20px;
}

header{
    text-align: center;
    color: black;
    font-size: 1.8em;
    margin: 10px;
    font-weight: 450;
}

#main-doc header{
    text-align: left;
    margin: 0;
}

section article{
    color: #4d4e53;
    margin: 15px;
    font-size: 1em;
}

#navbar li{
    color: #4d4e53;
    border-top: 1px solid;
    border-color: #4d4e53;
    list-style: none;
    width: 100%;
}

section li {
    margin: 15px 0px 0px 20px;
  }

#navbar ul{
    padding: 0;
}

#navbar a{
    text-decoration: none;
    color: #4d4e53;
    display: block;
    padding: 10px 30px;
    font-size: 1.05em;
    transition: all ease 0.2s;

}



code {
    display: block;
    text-align: left;
    white-space: pre-wrap; 
    position: relative;
    line-height: 1.5;
    background-color: #1e1e1e;
    color: #d4d4d4;
    padding: 15px;
    margin: 10px;
    border-radius: 5px;
    font-size: 1rem;
    font-family: 'Courier New', Courier, monospace;
    overflow-x: auto; /* Permite desplazamiento horizontal si el código es largo */
    border: 1px solid #3c3c3c; /* Bordes sutiles */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Efecto de sombra */
}

li code:not(.exep){
    display: inline; /* Mantiene el flujo en la misma línea */
    padding: 2px 5px; /* Reduce el padding para que se vea bien en línea */
    border-radius: 3px; /* Bordes más sutiles */
    font-size: 0.95rem; /* Un poco más pequeño para mejor integración */
    background-color: #1e1e1e; /* Mantiene el fondo oscuro */
    color: #d4d4d4;
}

#navbar a:hover{
    scale: 1.1;
    padding-left: 40px;
    color: #959595;
    background-color: rgb(232, 246, 255);
    border: 1px solid #4d4e534b;
    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.086);
    border-radius: 5px;
}

@media only screen and (max-width: 815px) {
    /* For mobile phones: */
    #navbar ul {
      height: 207px;
    }
  
    #navbar {
      background-color: white;
      position: absolute;
      top: 0;
      padding: 0;
      margin: 0;
      width: 100%;
      max-height: 275px;
      border: none;
      z-index: 1;
    }
  
    #main-doc {
      position: relative;
      margin-left: 0px;
      margin-top: 600px;
    }

    #navbar a:hover{
        scale: 1.1;
        padding-left: 60px;
        color: #959595;
        background-color: rgb(232, 246, 255);
        border: 1px solid #4d4e534b;
        box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.086);
        border-radius: 5px;
    }
  }
  

